--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -85,9 +85,6 @@
     <Resource Include="Resources\Images\Save48x48.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\FileUnknown48x48.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Images\AmbCard48x48.png" />
   </ItemGroup>
   <ItemGroup>
@@ -105,6 +102,15 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Contract256x256.png" />
     <Resource Include="Resources\Images\Error16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Scanner48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\FileUnknown.png" />
+    <Resource Include="Resources\Images\File_Excel.png" />
+    <Resource Include="Resources\Images\File_Pdf.png" />
+    <Resource Include="Resources\Images\File_Word.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
