--- a/Shell/App.config
+++ b/Shell/App.config
@@ -28,12 +28,12 @@
       <maximumFileSize value="10MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %level %-10logger - %message%newline" />
+        <conversionPattern value="%date %-5level - %message%newline" />
       </layout>
     </appender>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %level %-10logger - %message%newline" />
+        <conversionPattern value="%date %-5level - %message%newline" />
       </layout>
     </appender>
     <root>
