- Fixes #119 - CriticalFailureMediator now can be hidden and is called FailureMediator
- Saving of health group, education, nationality and marital status

--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Misc\CommandWrapper.cs" />
     <Compile Include="Misc\StaticBoolean.cs" />
     <Compile Include="Mvvm\Mediators\BusyMediator.cs" />
-    <Compile Include="Mvvm\Mediators\CriticalFailureMediator.cs" />
+    <Compile Include="Mvvm\Mediators\FailureMediator.cs" />
     <Compile Include="Mvvm\Mediators\IMediator.cs" />
     <Compile Include="Mvvm\Misc\FieldValue.cs" />
     <Compile Include="Mvvm\Misc\ObservableCollectionEx.cs" />
