Attention! Schema changes
First approach and draft version of person identity documents (no UI)

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Misc\AppConfiguration.cs" />
     <Compile Include="Misc\ChangeTracker.cs" />
     <Compile Include="Misc\DateTimeFormats.cs" />
+    <Compile Include="Misc\IChangeTracker.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Services\Interfaces\ICacheService.cs" />
     <Compile Include="Expressions\ISearchExpressionProvider.cs" />
