--- a/PatientInfoModule/PatientInfoModule.csproj
+++ b/PatientInfoModule/PatientInfoModule.csproj
@@ -104,8 +104,10 @@
     <Compile Include="Misc\Common.cs" />
     <Compile Include="Misc\ItemTemplateSelector.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
-    <Compile Include="Misc\PersonSuggestionProvider.cs" />
-    <Compile Include="Misc\RecordTypesSuggestionProvider.cs" />
+    <Compile Include="Misc\SuggestionProviders\IdentityDocumentsGivenOrgSuggestionProvider.cs" />
+    <Compile Include="Misc\SuggestionProviders\PersonSuggestionProvider.cs" />
+    <Compile Include="Misc\SuggestionProviders\RecordTypesSuggestionProvider.cs" />
+    <Compile Include="Misc\SuggestionProviders\SuggestionProviderNames.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\ContractService.cs" />
@@ -124,9 +126,12 @@
     <Compile Include="ViewModels\Contracts\ContractViewModel.cs" />
     <Compile Include="ViewModels\DocumentsHeaderViewModel.cs" />
     <Compile Include="ViewModels\EmptyPatientInfoViewModel.cs" />
-    <Compile Include="ViewModels\InfoHeaderViewModel.cs" />
-    <Compile Include="ViewModels\InfoContentViewModel.cs" />
+    <Compile Include="ViewModels\Info\IdentityDocumentCollectionViewModel.cs" />
+    <Compile Include="ViewModels\Info\InfoHeaderViewModel.cs" />
+    <Compile Include="ViewModels\Info\InfoContentViewModel.cs" />
     <Compile Include="ViewModels\Contracts\PatientContractsViewModel.cs" />
+    <Compile Include="ViewModels\Info\AddressViewModel.cs" />
+    <Compile Include="ViewModels\Info\IdentityDocumentViewModel.cs" />
     <Compile Include="ViewModels\PersonDocumentsViewModel.cs" />
     <Compile Include="ViewModels\ThumbnailViewModel.cs" />
     <Compile Include="Views\ContractsHeader.xaml.cs">
@@ -138,10 +143,13 @@
     <Compile Include="Views\EmptyPatientInfo.xaml.cs">
       <DependentUpon>EmptyPatientInfo.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\InfoHeader.xaml.cs">
+    <Compile Include="Views\Info\IdentityDocumentView.xaml.cs">
+      <DependentUpon>IdentityDocumentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Info\InfoHeader.xaml.cs">
       <DependentUpon>InfoHeader.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\InfoContent.xaml.cs">
+    <Compile Include="Views\Info\InfoContent.xaml.cs">
       <DependentUpon>InfoContent.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PatientContracts.xaml.cs">
@@ -188,11 +196,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\InfoHeader.xaml">
+    <Page Include="Views\Info\IdentityDocumentView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\InfoContent.xaml">
+    <Page Include="Views\Info\InfoHeader.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Info\InfoContent.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
