Implemented validations for contracts
Addition new organization through InteractionRequest
Added TwainDotNet nuget package for scanner
Downgrade log4net to version 1.2.11.0 (newer version doesnt work with TwainDotNet)
Implemented scanning docs
Implemented attachment docs (need to remake OpenFileDialog)

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Misc\EmptyDbAsyncEnumerator.cs" />
     <Compile Include="Misc\EmptyDbAsyncQueryProvider.cs" />
     <Compile Include="Misc\IDisposableQueryable.cs" />
+    <Compile Include="Misc\OptionValues.cs" />
     <Compile Include="Misc\SpecialValues.cs" />
     <Compile Include="Org.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
