--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -56,12 +56,18 @@
     <Compile Include="Expressions\SearchExpressionProvider.cs" />
     <Compile Include="Extensions\CacheServiceExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\ChangeTrackerExtensions.cs" />
     <Compile Include="Extensions\LogExtensions.cs" />
+    <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Misc\AppConfiguration.cs" />
-    <Compile Include="Misc\ChangeTracker.cs" />
+    <Compile Include="Misc\Change Tracking\ChangeTracker.cs" />
+    <Compile Include="Misc\Change Tracking\ChangeTrackerEx.cs" />
+    <Compile Include="Misc\Change Tracking\CompositeChangeTracker.cs" />
+    <Compile Include="Misc\Change Tracking\IChangeTrackable.cs" />
+    <Compile Include="Misc\Change Tracking\IChangeTrackerMediator.cs" />
     <Compile Include="Misc\DateTimeFormats.cs" />
-    <Compile Include="Misc\IChangeTracker.cs" />
+    <Compile Include="Misc\Change Tracking\IChangeTracker.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Services\Interfaces\ICacheService.cs" />
     <Compile Include="Expressions\ISearchExpressionProvider.cs" />
