--- a/PatientRecordsModule/PatientRecordsModule.csproj
+++ b/PatientRecordsModule/PatientRecordsModule.csproj
@@ -105,7 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\PatientRecordsService.cs" />
     <Compile Include="Services\Interfaces\IPatientRecordsService.cs" />
-    <Compile Include="ViewModels\NewVisitCreatingViewModel.cs" />
+    <Compile Include="ViewModels\VisitEditorViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordEditorViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordsViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordsHeaderViewModel.cs" />
@@ -113,8 +113,8 @@
     <Compile Include="ViewModels\PersonHierarchicalRecordsViewModel.cs" />
     <Compile Include="ViewModels\PersonHierarchicalVisitsViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordListViewModel.cs" />
-    <Compile Include="Views\NewVisitCreating.xaml.cs">
-      <DependentUpon>NewVisitCreating.xaml</DependentUpon>
+    <Compile Include="Views\VisitEditor.xaml.cs">
+      <DependentUpon>VisitEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PersonRecordEditor.xaml.cs">
       <DependentUpon>PersonRecordEditor.xaml</DependentUpon>
@@ -156,7 +156,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\NewVisitCreating.xaml">
+    <Page Include="Views\VisitEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
