--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -128,6 +128,13 @@
     <Resource Include="Resources\Images\VisitEdit48x48.png" />
     <Resource Include="Resources\Images\VisitRemove48x48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\VisitCompleted48x48.png" />
+    <Resource Include="Resources\Images\VisitInProgress48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Edit48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
