--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -118,6 +118,9 @@
     </Compile>
     <Compile Include="PartialClasses\InsuranceDocument.cs" />
     <Compile Include="PartialClasses\MKB.cs" />
+    <Compile Include="PartialClasses\Okato.cs" />
+    <Compile Include="PartialClasses\PersonAddress.cs" />
+    <Compile Include="PartialClasses\PersonDisability.cs" />
     <Compile Include="PartialClasses\PersonIdentityDocument.cs" />
     <Compile Include="PartialClasses\PersonName.cs" />
     <Compile Include="PartialClasses\RecordContract.cs" />
